.metadata/.plugins/org.eclipse.cdt.ui/Test003-UART-DMA.build.log
16:47:13 **** Incremental Build of configuration Debug for project Test003-UART-DMA ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'GetBuffer':
../Core/Src/main.c:71:17: warning: implicit declaration of function 'memcpy' [-Wimplicit-function-declaration]
   71 |                 memcpy(bb, Buf + head , tail - head);//string copy
      |                 ^~~~~~
../Core/Src/main.c:25:1: note: include '<string.h>' or provide a declaration of 'memcpy'
   24 | #include <stdio.h>
  +++ |+#include <string.h>
   25 | /* USER CODE END Includes */
../Core/Src/main.c:71:17: warning: incompatible implicit declaration of built-in function 'memcpy' [-Wbuiltin-declaration-mismatch]
   71 |                 memcpy(bb, Buf + head , tail - head);//string copy
      |                 ^~~~~~
../Core/Src/main.c:71:17: note: include '<string.h>' or provide a declaration of 'memcpy'
../Core/Src/main.c:76:17: warning: incompatible implicit declaration of built-in function 'memcpy' [-Wbuiltin-declaration-mismatch]
   76 |                 memcpy(bb, Buf + head , MAX_BUF - head);
      |                 ^~~~~~
../Core/Src/main.c:76:17: note: include '<string.h>' or provide a declaration of 'memcpy'
../Core/Src/main.c:83:20: warning: statement with no effect [-Wunused-value]
   83 |         return ret;4
      |                    ^
../Core/Src/main.c:83:21: error: expected ';' before '}' token
   83 |         return ret;4
      |                     ^
      |                     ;
   84 | }
      | ~                    
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:119:3: warning: implicit declaration of function 'ProgramStart' [-Wimplicit-function-declaration]
  119 |   ProgramStart("UART - DMA");
      |   ^~~~~~~~~~~~
../Core/Src/main.c:120:32: warning: pointer targets in passing argument 2 of 'HAL_UART_Receive_DMA' differ in signedness [-Wpointer-sign]
  120 |   HAL_UART_Receive_DMA(&huart2,Buf, MAX_BUF);
      |                                ^~~
      |                                |
      |                                char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:750:76: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
  750 | HAL_StatusTypeDef HAL_UART_Receive_DMA(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size);
      |                                                                   ~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:39: Core/Src/main.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.

16:47:13 Build Failed. 2 errors, 6 warnings. (took 408ms)

